--- a/6dejaar/dynamica/exercises/vragen_2Dimport.tex
+++ b/6dejaar/dynamica/exercises/vragen_2Dimport.tex
@@ -11,9 +11,15 @@
 
 \input{./lib/kin_theorie_I_1} % Verplaatsing en afgelegde weg
 \input{./lib/2d_abstract_1}
-\input{./lib/2d_abstract_I_2}
+% \input{./lib/2d_abstract_I_2}
 \input{./lib/2d_I_1} % FV 14 p. 88
 \input{./lib/2d_I_2} % FV 6 p. 92 
 \input{./lib/dyn_ECB_I_1} % Steen aan een touwtje, middelpuntzoekende F
+
+
+
+%\input{./lib/buffel}
+%\input{./lib/veerman}
+\input{./lib/2d_mk_1}
 
 \end{document}
