--- a/6dejaar/dynamica/exercises/vragen_2Dnoimport.tex
+++ b/6dejaar/dynamica/exercises/vragen_2Dnoimport.tex
@@ -5,22 +5,24 @@
 \begin{document}
         \author{Bert Lambregs}
         \xmtitle{Oefeningen (andere)}
-% !TEX root = ../main.tex
-
-
-\begin{enumerate}
 
 
 
-\item Bespreek de horizontale worp.
+\begin{exercise} Bespreek de horizontale worp.
 
-\item Toon aan dat de versnelling bij een ECB een middelpuntzoekende versnelling is.
+\end{exercise}
 
-\item Voor een ECB heb je bewezen dat de versnelling wordt gegeven door de formule $\vec{a}=-\omega^2\cdot\vec{r}$, met $\omega$ de hoeksnelheid en $\vec{r}$ de plaatsvector van de ECB. 
+\begin{exercise} Toon aan dat de versnelling bij een ECB een middelpuntzoekende versnelling is.
+
+\end{exercise}
+
+\begin{exercise} Voor een ECB heb je bewezen dat de versnelling wordt gegeven door de formule $\vec{a}=-\omega^2\cdot\vec{r}$, met $\omega$ de hoeksnelheid en $\vec{r}$ de plaatsvector van de ECB. 
 
 Hoe kan je uit deze formule besluiten dat de versnelling bij een ECB een middelpuntzoekende versnelling is?
 
-\item
+\end{exercise}
+
+\begin{exercise}
 \begin{enumerate}
 	\item\label{ECB_formule} Bewijs dat de versnelling van een ECB gegeven wordt door $\vec{a}=-\omega^2\cdot\vec{r}$. Hierin is $\omega$ de hoeksnelheid en $\vec{r}$ de plaatsvector van de ECB.
 	\item Hoe kan je uit de formule voor de versnelling in \ref{ECB_formule} besluiten dat de versnelling bij een ECB een middelpuntzoekende versnelling is?
@@ -38,7 +40,9 @@ Voor (a):
 Voor (b) twee punten, voor argument voor de zin en argument voor de richting
 \end{oplossing}
 
-\item Bewijs dat de snelheid aan de baan raakt.
+\end{exercise}
+
+\begin{exercise} Bewijs dat de snelheid aan de baan raakt.
 
 
 
@@ -46,19 +50,21 @@ Voor (b) twee punten, voor argument voor de zin en argument voor de richting
 
 
 
-\item Welk punt heeft de grootste versnelling: een punt op de buitenrand van een ronddraaiende cd, of een punt op de helft van de straal van een cd die met een tweemaal zo grote hoeksnelheid ronddraait? Toon je antwoord aan.
+\end{exercise}
 
-\item Als $a_x=0$, wat weet je dan over de snelheid?
+\begin{exercise} Welk punt heeft de grootste versnelling: een punt op de buitenrand van een ronddraaiende cd, of een punt op de helft van de straal van een cd die met een tweemaal zo grote hoeksnelheid ronddraait? Toon je antwoord aan.
 
-\item Een bal wordt in een horizontale richting van de rand van een rotswand gegooid, met beginsnelheid $v_0$. De hoek die de bewegingsrichting van de bal op een willekeurig moment met de horizontaal maakt, noemen we $\theta$. Leid een formule af die voor de periode dat de bal onderweg is de hoek $\theta$ als functie van $t$ geeft.
+\end{exercise}
 
+\begin{exercise} Als $a_x=0$, wat weet je dan over de snelheid?
 
+\end{exercise}
 
-\end{enumerate}
+\begin{exercise} Een bal wordt in een horizontale richting van de rand van een rotswand gegooid, met beginsnelheid $v_0$. De hoek die de bewegingsrichting van de bal op een willekeurig moment met de horizontaal maakt, noemen we $\theta$. Leid een formule af die voor de periode dat de bal onderweg is de hoek $\theta$ als functie van $t$ geeft.
+
+\end{exercise}
 
 \subsection{Vraagstukken}
-
-\begin{enumerate}
 
 	
 
@@ -69,7 +75,7 @@ Voor (b) twee punten, voor argument voor de zin en argument voor de richting
 
 
 
-\item De beweging van een voorwerp wordt beschreven door volgende co\"ordinaatfuncties:
+\begin{exercise} De beweging van een voorwerp wordt beschreven door volgende co\"ordinaatfuncties:
 \begin{eqnarray*}
 	x(t)=5t+3\qquad y(t)=-4t^2+t
 \end{eqnarray*}
@@ -95,7 +101,9 @@ $y(x)=-4\left(\frac{x-3}{5}\right)^2+\left(\frac{x-3}{5}\right)=\frac{-4}{25}x^{
 
 
 
-\item Een tennisspeler, die $9,0\rm\,m$ voor het net staat, slaat
+\end{exercise}
+
+\begin{exercise} Een tennisspeler, die $9,0\rm\,m$ voor het net staat, slaat
 een bal in horizontale richting met een snelheid van $25\rm\,m/s$.
 Het racket raakt de bal $1,8\rm\,m$ boven de grond. De bovenkant van
 het net is $1,00\rm\,m$ boven de grond. Vliegt de bal over het net,
@@ -103,7 +111,9 @@ of er tegenaan?
 
 
 
-\item Een pijl, die horizontaal wordt afgeschoten in het punt P
+\end{exercise}
+
+\begin{exercise} Een pijl, die horizontaal wordt afgeschoten in het punt P
 treft een verticale wand in punt (1). Verdubbelt men de
 vertreksnelheid van de pijl in het punt P, dan zal de pijl dezelfde
 wand treffen:
@@ -133,7 +143,9 @@ y'&=&\frac{g}{2v_0'^2}x^2\\
 De pijl zal dus in punt (3) terechtkomen.
 \end{oplossing}
 
-\item Een puntmassa beschrijft een cirkel met een straal van $5,0\rm\,cm$ en een periode van $0,33\rm\,s$. Welke afstand op de cirkel legt deze puntmassa in $7,0\rm\,s$ af?
+\end{exercise}
+
+\begin{exercise} Een puntmassa beschrijft een cirkel met een straal van $5,0\rm\,cm$ en een periode van $0,33\rm\,s$. Welke afstand op de cirkel legt deze puntmassa in $7,0\rm\,s$ af?
 \begin{oplossing}
 \item[\textit{gevraagd}]$s$ (booglengte)
 \item[\textit{oplossing}]Omdat de grootte van de snelheid constant is, is de
@@ -151,7 +163,9 @@ $l=vt=r\omega t=\frac{2\pi r}{T}t=70\pi/33=6,66\rm\,m$
 
 
 
-\item[Opgave] Bereken de hoeksnelheid van de aarde om haar as. Bereken de
+\end{exercise}
+
+\begin{exercise}[Opgave] Bereken de hoeksnelheid van de aarde om haar as. Bereken de
 snelheid van een punt van het aardoppervlak:
 \begin{enumerate}
 \item aan de evenaar
@@ -196,14 +210,22 @@ Dit is ook nog snel, nl. $1048\rm\,km/h$.
 
 
 
-\item Een auto rijdt door een bocht met een constante snelheid van \SI{50}{km/h}. Heef de auto een andere versnelling wanneer hij diezelfde bocht neemt met een constante snelheid van \SI{70}{km/h}? Licht je antwoord toe.
+\end{exercise}
 
-\item Als een auto met \SI{60}{km/h} een scherpe bocht neemt, en daarna met dezelfde snelheid een flauwe bocht, is de versnelling dan in beide gevallen gelijk? Leg uit.
+\begin{exercise} Een auto rijdt door een bocht met een constante snelheid van \SI{50}{km/h}. Heef de auto een andere versnelling wanneer hij diezelfde bocht neemt met een constante snelheid van \SI{70}{km/h}? Licht je antwoord toe.
 
-\item Tijdens het trainen van een ruimtevaarder wordt deze in een cir\-kel\-vor\-mi\-ge beweging gebracht met een zetel, die zich aan het uiteinde van een ho\-ri\-zon\-tale arm van $5,00\rm\,m$ lengte bevindt. Indien hij versnellingen tot $10g$ kan verdragen, wat is dan de toegelaten maximale snelheid, en het maximale toegelaten toerental?
+\end{exercise}
+
+\begin{exercise} Als een auto met \SI{60}{km/h} een scherpe bocht neemt, en daarna met dezelfde snelheid een flauwe bocht, is de versnelling dan in beide gevallen gelijk? Leg uit.
+
+\end{exercise}
+
+\begin{exercise} Tijdens het trainen van een ruimtevaarder wordt deze in een cir\-kel\-vor\-mi\-ge beweging gebracht met een zetel, die zich aan het uiteinde van een ho\-ri\-zon\-tale arm van $5,00\rm\,m$ lengte bevindt. Indien hij versnellingen tot $10g$ kan verdragen, wat is dan de toegelaten maximale snelheid, en het maximale toegelaten toerental?
 
 
-\item 
+\end{exercise}
+
+\begin{exercise} 
 \begin{minipage}[t]{0.5\textwidth}
 Alle punten van een ring voeren een eenparige cirkelbeweging
 uit. De grootte van de snelheid in punt A is $v_a$ en in punt B,
@@ -232,7 +254,9 @@ v_br_a&=&v_ar_b
 Het juist antwoord is dus (b).
 \end{oplossing}
 
-\item Bij een fiets zijn het grootste en het kleinste kamwiel door
+\end{exercise}
+
+\begin{exercise} Bij een fiets zijn het grootste en het kleinste kamwiel door
 middel van een ketting met elkaar verbonden. Tussen de hoeksnelheid
 $\omega_1$ van het grootste kamwiel en $\omega_2$ van het kleinste
 kamwiel bestaat de volgende relatie:
@@ -265,7 +289,9 @@ Het juist antwoord is dus (c).
 
 
 
-\item Een auto rijdt door een brugleuning en komt $5,2\rm\,m$ lager in het water terecht. De horizontale afstand tussen de plaats waar hij door de leuning ging en waar hij in het water terechtkwam, is $22\rm\,m$. Kan de politie hieruit afleiden met welke snelheid hij ongeveer reed? Was zijn werkelijke snelheid groter of kleiner?
+\end{exercise}
+
+\begin{exercise} Een auto rijdt door een brugleuning en komt $5,2\rm\,m$ lager in het water terecht. De horizontale afstand tussen de plaats waar hij door de leuning ging en waar hij in het water terechtkwam, is $22\rm\,m$. Kan de politie hieruit afleiden met welke snelheid hij ongeveer reed? Was zijn werkelijke snelheid groter of kleiner?
 \begin{oplossing}
 \begin{eqnarray*}
 y&=&\frac{g}{2v_0^2}x^2\\
@@ -276,7 +302,9 @@ v_0&=&x\sqrt{\frac{g}{2y}}=21,37\rm\,m/s=77\rm\,km/h
 
 
 
-\item[Opgave] Een vliegtuig vliegt met een snelheid van $450\rm\,km/h$ op een hoogte van $920\rm\,m$.
+\end{exercise}
+
+\begin{exercise}[Opgave] Een vliegtuig vliegt met een snelheid van $450\rm\,km/h$ op een hoogte van $920\rm\,m$.
 \begin{enumerate}
 \item Hoever voor het doel moeten de voedselpakketten gelost worden om op het doel terecht te komen?
 \item Hoeveel tijd hebben de pakketten nodig om het doel te bereiken?
@@ -311,9 +339,13 @@ t&=&\sqrt{\frac{2y}{g}}=13,7\rm\,s
 
 
 
-\item Een vliegwiel doet 450 omwentelingen per minuut. Zoek de hoeksnelheid van het wiel en de snelheid van een punt op $1,70\rm\,m$ van het middelpunt.
+\end{exercise}
 
-\item In een bocht met straal $160~\rm m$ verlaagt een autorenner
+\begin{exercise} Een vliegwiel doet 450 omwentelingen per minuut. Zoek de hoeksnelheid van het wiel en de snelheid van een punt op $1,70\rm\,m$ van het middelpunt.
+
+\end{exercise}
+
+\begin{exercise} In een bocht met straal $160~\rm m$ verlaagt een autorenner
 zijn snelheid eenparig van $90~\rm m/s$ tot $75~\rm m/s$ in $2~\rm
 s$. Bereken de grootte van de versnelling van de wagen op het
 ogenblik dat de snelheid $80~\rm m/s$ is.
@@ -325,7 +357,9 @@ ogenblik dat de snelheid $80~\rm m/s$ is.
 \end{enumerate}
 \footnote{(antw. b)}
 
-\item In de figuur is de versnelling en de snelheid van een puntmassa gegeven op een bepaald tijdstip. De grootte van de versnelling is $15,0\rm\,m/s^2$ en de vector maakt een hoek van $30^\circ$ met de straal van de cirkel. De straal van de cirkel is $2,50\rm\,m$. Bepaal de grootte van de normaalversnelling, de grootte van de tangenti\"ele versnelling en de grootte van de baansnelheid.
+\end{exercise}
+
+\begin{exercise} In de figuur is de versnelling en de snelheid van een puntmassa gegeven op een bepaald tijdstip. De grootte van de versnelling is $15,0\rm\,m/s^2$ en de vector maakt een hoek van $30^\circ$ met de straal van de cirkel. De straal van de cirkel is $2,50\rm\,m$. Bepaal de grootte van de normaalversnelling, de grootte van de tangenti\"ele versnelling en de grootte van de baansnelheid.
 %ECB_tangentieel nog invoegen ... !
 
 
@@ -335,11 +369,15 @@ ogenblik dat de snelheid $80~\rm m/s$ is.
 
 \section{Schuine worp}
 
-\item Leid een formule af die bij een schuine worp de dracht
+\end{exercise}
+
+\begin{exercise} Leid een formule af die bij een schuine worp de dracht
 (draagwijdte) geeft in functie van de beginsnelheid en de hoek
 waaronder wordt geschoten.
 
-\item Een projectiel wordt met een beginsnelheid van $350\rm\,m/s$
+\end{exercise}
+
+\begin{exercise} Een projectiel wordt met een beginsnelheid van $350\rm\,m/s$
 onder een hoek van $30^\circ$ met de horizontale afgeschoten.
 \begin{enumerate}
 \item Welke hoogte bereikt het projectiel?
@@ -347,7 +385,9 @@ onder een hoek van $30^\circ$ met de horizontale afgeschoten.
 \end{enumerate}
 \footnote{$h=1561\rm\,m$, $d=10814\rm\,m$}
 
-\item Een puntmassa wordt met een beginsnelheid van $40\rm\,m/s$
+\end{exercise}
+
+\begin{exercise} Een puntmassa wordt met een beginsnelheid van $40\rm\,m/s$
 onder een hoek van $60^{\circ}$ opgeworpen.
 \begin{enumerate}
 \item Hoe groot is de snelheid in een punt op $35\rm\,m$ hoogte?
@@ -358,7 +398,9 @@ hoogte is maar bij de dalende beweging?
 \item Onder welke hoek treft het voorwerp de grond?
 \end{enumerate}
 
-\item Een obus wordt met een beginsnelheid $\vec{v}_0$ en onder een
+\end{exercise}
+
+\begin{exercise} Een obus wordt met een beginsnelheid $\vec{v}_0$ en onder een
 hoek $\varphi$ weggeschoten. In het hoogste punt van zijn baan is:
 \begin{enumerate}
 \item $v_x=0\rm\,m/s$;
@@ -368,7 +410,9 @@ hoek $\varphi$ weggeschoten. In het hoogste punt van zijn baan is:
 \end{enumerate}
 \footnote{antwoord d}
 
-\item Verschillende tennisballen worden met even grote snelheid maar
+\end{exercise}
+
+\begin{exercise} Verschillende tennisballen worden met even grote snelheid maar
 onder een verschillende hoek weggeschoten. De tennisbal die de
 grootste dracht bereikt is deze die weggeschoten wordt onder een
 hoek van:
@@ -380,24 +424,32 @@ hoek van:
 \end{enumerate}
 \footnote{antwoord b}
 
-\item Twee raketten worden vanuit eenzelfde punt schuin
+\end{exercise}
+
+\begin{exercise} Twee raketten worden vanuit eenzelfde punt schuin
 weggeschoten. Hun beginsnelheid is even groot en hun beginhoeken
 zijn complementair ($\alpha+\beta=\frac{\pi}{2}$). Hebben deze
 raketten dezelfde dracht?
 
-\item Vanop de top van een kerktoren van $75,0\rm\,m$ hoog schiet
+\end{exercise}
+
+\begin{exercise} Vanop de top van een kerktoren van $75,0\rm\,m$ hoog schiet
 men een projectiel onder een hoek van $40^\circ$ met de horizontale
 weg. De grootte van de beginsnelheid is $400\rm\,m/s$. Na hoeveel
 tijd bereikt het projectiel de grond, en op welke afstand van de
 voet van de toren? \footnote{$t=52,7\rm\,s$, $x=16151\rm\,m$}
 
-\item Toon met een volledige opbouw aan dat de formule voor de
+\end{exercise}
+
+\begin{exercise} Toon met een volledige opbouw aan dat de formule voor de
 maximale hoogte bij de schuine worp wordt gegeven door:
 \begin{displaymath}
 h=\frac{v_0^2\sin^2{\varphi}}{2g}
 \end{displaymath}
 
-\item Een projectiel wordt afgevuurd met een beginsnelheid
+\end{exercise}
+
+\begin{exercise} Een projectiel wordt afgevuurd met een beginsnelheid
 $\vec{v}_0$ die een hoek $\varphi$ maakt met de horizontale
 \mbox{$x$-as}.
 % \newline
@@ -413,7 +465,9 @@ functie van de tijd er als volgt uit:
 \end{flushright}
 \end{figure}
 
-\item Onderstaande figuur stelt de baan voor van
+\end{exercise}
+
+\begin{exercise} Onderstaande figuur stelt de baan voor van
 een kogel die op het ogenblik \mbox{$t=0$~s} afgeschoten wordt
 vanuit de oorsprong. De aangeduide punten geven om de \mbox{100 ms}
 de plaats van de kogel aan.
@@ -432,7 +486,9 @@ De horizontale snelheidscomponent van de kogel is gelijk aan?
 \item 20 m/s
 \end{enumerate}
 
-\item Nadat de kerstman zijn speelgoed op de
+\end{exercise}
+
+\begin{exercise} Nadat de kerstman zijn speelgoed op de
 gebruikelijke manier geleverd heeft, wil hij zich ook eens amuseren
 en glijdt langs het beijzeld dak naar beneden. Hij vertrekt vanuit
 rust op de top van het dak dat $8,2~\rm m$ lang is met een
@@ -454,9 +510,7 @@ y=x\tan\varphi-\frac{g}{2v_0^2\cos^2\varphi}x^2
 \]}
 \end{enumerate}
 
+\end{exercise}
 
-
-
-\end{enumerate}
 
 \end{document}
