--- a/Oef2D.tex
+++ b/Oef2D.tex
@@ -25,7 +25,7 @@
 \makeatother
 
 % 
-% \activitychapter{6dejaar/dynamica/exercises/vragen_2Dimport.tex}
+\activitychapter{6dejaar/dynamica/exercises/vragen_2Dimport.tex}
 \activitychapter{6dejaar/dynamica/exercises/vragen_2Dnoimport.tex}
 % \activitychapter{6dejaar/kinematica/exercises/vragen_1vraagstukken.tex}
 
