oefeningen 1D eerste versie

--- a/6dejaar/kinematica/knmtc_1dim_oef.tex
+++ b/6dejaar/kinematica/knmtc_1dim_oef.tex
@@ -10,5 +10,7 @@
 
 De oefeningen zijn opgedeeld in denkvragen en vraagstukken. Zie daarvoor de hierbij horende onderdelen.
 
+De denkvragen bevatten conceptuele oefeningen, oefeningen die zuiver op algebra\"ische manipulaties focussen, grafische oefeningen, vragen die op theoretische aspecten ingaan \ldots
+
 
 \end{document}
