--- a/6dejaar/kinematica/knmtc_1dim_oef_vraagstukken.tex
+++ b/6dejaar/kinematica/knmtc_1dim_oef_vraagstukken.tex
@@ -214,7 +214,7 @@ Een deeltje beweegt in de zin van de $x$-as. De nevenstaande grafiek geeft aan h
 
 % Bron Serway 4yh edition oefening 77 chapter 2
 \begin{exercise}
-    (III) Maggie en Jennifer lopen de \SI{100}{m}. Beiden doen ze er exact 10,2 se\-conden over. Met een eenparige versnelling bereikt Maggie na \SI{2}{s} haar maximale snelheid, Jennifer doet dat na \SI{3}{s}. Hun maximale snelheden houden ze aan voor de rest van de wedstrijd.
+    ($\ast\ast\ast$) Maggie en Jennifer lopen de \SI{100}{m}. Beiden doen ze er exact 10,2 se\-conden over. Met een eenparige versnelling bereikt Maggie na \SI{2}{s} haar maximale snelheid, Jennifer doet dat na \SI{3}{s}. Hun maximale snelheden houden ze aan voor de rest van de wedstrijd.
     \begin{enumerate}
         \item Wat zijn hun maximale snelheden?
         \item Wat is de versnelling van iedere sprinter?
