--- a/6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex
@@ -23,16 +23,16 @@ Hieronder een voorbeeld van een voetbalveld waarop de positie \(\vec{r}\) van de
 Voor een toeschouwer in het publiek staan beide referentiestelsels stil, bijgevolg is de snelheid \(\vec{v}\) voor beiden dezelfde.
 
 
-% \begin{image}
-% 	% \includegraphics[width=0.3\textwidth]{referentiestelsels}
-% % Uit ppt Vincent, IK WIL AFBEELDING GROTER MAAR LUKT ME NIET.
-% \end{image}
+\begin{image}
+	% \includegraphics[width=0.3\textwidth]{referentiestelsels}
+% Uit ppt Vincent, IK WIL AFBEELDING GROTER MAAR LUKT ME NIET.
+\end{image}
 
 \begin{exercise}
 De kolibri in onderstaande foto blijft ter plekke in de lucht hangen onder de bloem. Geef twee referentiestelsels waarin deze vogel \textbf{niet} stilstaat. 
 
-\begin{image}
-	\includegraphics[0.4\textwidth]{kolibri}
+\begin{image}[0.4\textwidth]
+	\includegraphics{kolibri}
 % Bron: https://unsplash.com/photos/green-and-black-humming-bird-flying-p-DDK9lOmmE 
 % AFBEELDING KLEINER? LUKT ME NIET
 \end{image}
